--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/app.js",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "node ./dist/app.js"
+    "dev": "node --watch ./dist/app.js"
   },
   "keywords": [],
   "author": "Rodrigo Meneses",
