--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "petmatch",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./dist/app.js",
-  "scripts": {
-    "watch": "tsc -w",
-    "dev": "node --watch ./dist/app.js"
-  },
-  "keywords": [],
-  "author": "Rodrigo Meneses",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.17",
-    "ts-standard": "^12.0.2",
-    "typescript": "^5.0.2"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
-  },
-  "ts-standard": {
-    "project": "./tsconfig.json"
-  }
+    "name": "petmatch",
+    "version": "1.0.0",
+    "description": "",
+    "main": "./dist/app.js",
+    "scripts": {
+        "watch": "tsc -w",
+        "dev": "node --watch ./dist/app.js"
+    },
+    "keywords": [],
+    "author": "Rodrigo Meneses",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/express": "^4.17.17",
+        "@typescript-eslint/eslint-plugin": "^5.57.0",
+        "eslint": "^8.37.0",
+        "eslint-config-standard-with-typescript": "^34.0.1",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-n": "^15.7.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "prettier": "^2.8.7",
+        "typescript": "^5.0.2"
+    },
+    "dependencies": {
+        "express": "^4.18.2"
+    }
 }
