--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
         "eslint-plugin-n": "^15.7.0",
         "eslint-plugin-promise": "^6.1.1",
         "prettier": "^2.8.7",
+        "prisma": "^4.12.0",
         "typescript": "^5.0.2"
     },
     "dependencies": {
+        "@prisma/client": "^4.12.0",
         "express": "^4.18.2"
     }
 }
