--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "./dist/app.js",
     "scripts": {
+        "test": "vitest",
         "watch": "tsc -w",
         "dev": "node --watch ./dist/app.js"
     },
@@ -20,7 +21,8 @@
         "eslint-plugin-promise": "^6.1.1",
         "prettier": "^2.8.7",
         "prisma": "^4.12.0",
-        "typescript": "^5.0.2"
+        "typescript": "^5.0.2",
+        "vitest": "^0.29.8"
     },
     "dependencies": {
         "@prisma/client": "^4.12.0",
