--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "Rodrigo Meneses",
     "license": "ISC",
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.17",
         "@typescript-eslint/eslint-plugin": "^5.57.0",
         "eslint": "^8.37.0",
@@ -26,6 +27,7 @@
     },
     "dependencies": {
         "@prisma/client": "^4.12.0",
+        "bcrypt": "^5.1.0",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1"
     }
