--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.1",
         "@typescript-eslint/eslint-plugin": "^5.57.0",
         "eslint": "^8.37.0",
         "eslint-config-standard-with-typescript": "^34.0.1",
@@ -29,6 +30,7 @@
         "@prisma/client": "^4.12.0",
         "bcrypt": "^5.1.0",
         "express": "^4.18.2",
-        "express-async-errors": "^3.1.1"
+        "express-async-errors": "^3.1.1",
+        "jsonwebtoken": "^9.0.0"
     }
 }
